user_level aggiunto come risposta 200 su users.js. Aggiunto inoltre il sistema di controllo della password che deve rispettare certe caratteristiche. Testing corretti.
